--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Sharing Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <nav class="flex-div">
+        <div class="nav-left flex-div">
+            <img src="./images/menu.png" class="menu-icon" alt="menu-img" />
+            <img src="./images/logo.png" class="logo" alt="logo-img" />
+        </div>
+        <div class="nav-middle flex-div">
+            <div class="search-box">
+                <input type="text" placeholder="Search">
+                <img src="./images/search.png" alt="search-img" />
+            </div>
+            <img src="./images/voice-search.png" class="mic-icon" alt="voice-search-img" />
+        </div>
+        <div class="nav-right flex-div">
+            <img src="./images/upload.png" alt="upload-img" />
+            <img src="./images/more.png" alt="more-img" />
+            <img src="./images/notification.png" alt="notification-img" />
+            <img src="./images/Jack.png" class="user-icon" alt="jack-img" />
+        </div>
+    </nav>
 </body>
+
 </html>
