--- a/index.html
+++ b/index.html
@@ -28,6 +28,31 @@
             <img src="./images/Jack.png" class="user-icon" alt="jack-img" />
         </div>
     </nav>
+
+    
+    <!-- -------------------Sidebar--------------------- -->
+
+<div class="sidebar">
+    <div class="shortcut-links">
+        <a href="#"><img src="./images/home.png" alt="home-img"/><p>Home</p></a>
+        <a href="#"><img src="./images/explore.png" alt="explore-img"/><p>Explore</p></a>
+        <a href="#"><img src="./images/subscriprion.png" alt="subscription-img"/><p>Subscription</p></a>
+        <a href="#"><img src="./images/library.png" alt="library-img"/><p>Library</p></a>
+        <a href="#"><img src="./images/history.png" alt="history-img"/><p>History</p></a>
+        <a href="#"><img src="./images/playlist.png" alt="playlist-img"/><p>Playlist</p></a>
+        <a href="#"><img src="./images/messages.png" alt="message-img"/><p>Messages</p></a>
+        <a href="#"><img src="./images/show-more.png" alt="show-more-img"/><p>Show More</p></a>
+    <hr/>
+    </div>
+    <div class="subscribed-list">
+        <h3>SUBSCRIBED</h3>
+        <a href="#"><img src="./images/Jack.png" alt="jack-img"/><p>Jack Nicholson</p></a>
+        <a href="#"><img src="./images/simon.png" alt="simon-img"/><p>Simon </p></a>
+        <a href="#"><img src="./images/tom.png" alt="tom-img"/><p>Jack Nicholson</p></a>
+        <a href="#"><img src="./images/megan.png" alt="megan-img"/><p>Jack Nicholson</p></a>
+        <a href="#"><img src="./images/cameron.png" alt="cameron-img"/><p>Jack Nicholson</p></a>
+    </div>
+</div>
 </body>
 
 </html>
