Toggle-Sidebar-Menu Section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <a href="#"><img src="./images/cameron.png" alt="cameron-img"/><p>Jack Nicholson</p></a>
     </div>
 </div>
+
+<script src="./scipt.js"></script>
 </body>
 
 </html>
