--- a/index.html
+++ b/index.html
@@ -29,32 +29,163 @@
         </div>
     </nav>
 
-    
+
     <!-- -------------------Sidebar--------------------- -->
 
-<div class="sidebar">
-    <div class="shortcut-links">
-        <a href="#"><img src="./images/home.png" alt="home-img"/><p>Home</p></a>
-        <a href="#"><img src="./images/explore.png" alt="explore-img"/><p>Explore</p></a>
-        <a href="#"><img src="./images/subscriprion.png" alt="subscription-img"/><p>Subscription</p></a>
-        <a href="#"><img src="./images/library.png" alt="library-img"/><p>Library</p></a>
-        <a href="#"><img src="./images/history.png" alt="history-img"/><p>History</p></a>
-        <a href="#"><img src="./images/playlist.png" alt="playlist-img"/><p>Playlist</p></a>
-        <a href="#"><img src="./images/messages.png" alt="message-img"/><p>Messages</p></a>
-        <a href="#"><img src="./images/show-more.png" alt="show-more-img"/><p>Show More</p></a>
-    <hr/>
+    <div class="sidebar">
+        <div class="shortcut-links">
+            <a href="#"><img src="./images/home.png" alt="home-img" />
+                <p>Home</p>
+            </a>
+            <a href="#"><img src="./images/explore.png" alt="explore-img" />
+                <p>Explore</p>
+            </a>
+            <a href="#"><img src="./images/subscriprion.png" alt="subscription-img" />
+                <p>Subscription</p>
+            </a>
+            <a href="#"><img src="./images/library.png" alt="library-img" />
+                <p>Library</p>
+            </a>
+            <a href="#"><img src="./images/history.png" alt="history-img" />
+                <p>History</p>
+            </a>
+            <a href="#"><img src="./images/playlist.png" alt="playlist-img" />
+                <p>Playlist</p>
+            </a>
+            <a href="#"><img src="./images/messages.png" alt="message-img" />
+                <p>Messages</p>
+            </a>
+            <a href="#"><img src="./images/show-more.png" alt="show-more-img" />
+                <p>Show More</p>
+            </a>
+            <hr />
+        </div>
+        <div class="subscribed-list">
+            <h3>SUBSCRIBED</h3>
+            <a href="#"><img src="./images/Jack.png" alt="jack-img" />
+                <p>Jack Nicholson</p>
+            </a>
+            <a href="#"><img src="./images/simon.png" alt="simon-img" />
+                <p>Simon </p>
+            </a>
+            <a href="#"><img src="./images/tom.png" alt="tom-img" />
+                <p>Jack Nicholson</p>
+            </a>
+            <a href="#"><img src="./images/megan.png" alt="megan-img" />
+                <p>Jack Nicholson</p>
+            </a>
+            <a href="#"><img src="./images/cameron.png" alt="cameron-img" />
+                <p>Jack Nicholson</p>
+            </a>
+        </div>
     </div>
-    <div class="subscribed-list">
-        <h3>SUBSCRIBED</h3>
-        <a href="#"><img src="./images/Jack.png" alt="jack-img"/><p>Jack Nicholson</p></a>
-        <a href="#"><img src="./images/simon.png" alt="simon-img"/><p>Simon </p></a>
-        <a href="#"><img src="./images/tom.png" alt="tom-img"/><p>Jack Nicholson</p></a>
-        <a href="#"><img src="./images/megan.png" alt="megan-img"/><p>Jack Nicholson</p></a>
-        <a href="#"><img src="./images/cameron.png" alt="cameron-img"/><p>Jack Nicholson</p></a>
-    </div>
-</div>
 
-<script src="./scipt.js"></script>
+    <!-- ------------main ----------------------- -->
+
+    <div class="container">
+        <div class="banner">
+            <img src="./images/banner.png" alt="banner-img" />
+        </div>
+        <div class="list-container">
+            <div class="vid-list">
+               <a href=""><img src="./images/thumbnail1.png" class="thumbnail" /></a> 
+                <div class="flex-div">
+                    <img src="./images/Jack.png" alt="jack-img" />
+                    <div class="vid-info">
+                        <a href="">Best Channel to learn coding that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views &bull; 2 days</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vid-list">
+                <a href=""><img src="./images/thumbnail2.png" class="thumbnail" /></a> 
+                 <div class="flex-div">
+                     <img src="./images/Jack.png" alt="jack-img" />
+                     <div class="vid-info">
+                         <a href="">Best Channel to learn coding that help you to be a web developer</a>
+                     <p>Easy Tutorials</p>
+                     <p>15k Views 2 days</p>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="vid-list">
+                <a href=""><img src="./images/thumbnail3.png" class="thumbnail" /></a> 
+                 <div class="flex-div">
+                     <img src="./images/Jack.png" alt="jack-img" />
+                     <div class="vid-info">
+                         <a href="">Best Channel to learn coding that help you to be a web developer</a>
+                     <p>Easy Tutorials</p>
+                     <p>15k Views 2 days</p>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="vid-list">
+                <a href=""><img src="./images/thumbnail4.png" class="thumbnail" /></a> 
+                 <div class="flex-div">
+                     <img src="./images/Jack.png" alt="jack-img" />
+                     <div class="vid-info">
+                         <a href="">Best Channel to learn coding that help you to be a web developer</a>
+                     <p>Easy Tutorials</p>
+                     <p>15k Views 2 days</p>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="vid-list">
+                <a href=""><img src="./images/thumbnail5.png" class="thumbnail" /></a> 
+                 <div class="flex-div">
+                     <img src="./images/Jack.png" alt="jack-img" />
+                     <div class="vid-info">
+                         <a href="">Best Channel to learn coding that help you to be a web developer</a>
+                     <p>Easy Tutorials</p>
+                     <p>15k Views 2 days</p>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="vid-list">
+                <a href=""><img src="./images/thumbnail6.png" class="thumbnail" /></a> 
+                 <div class="flex-div">
+                     <img src="./images/Jack.png" alt="jack-img" />
+                     <div class="vid-info">
+                         <a href="">Best Channel to learn coding that help you to be a web developer</a>
+                     <p>Easy Tutorials</p>
+                     <p>15k Views 2 days</p>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="vid-list">
+                <a href=""><img src="./images/thumbnail7.png" class="thumbnail" /></a> 
+                 <div class="flex-div">
+                     <img src="./images/Jack.png" alt="jack-img" />
+                     <div class="vid-info">
+                         <a href="">Best Channel to learn coding that help you to be a web developer</a>
+                     <p>Easy Tutorials</p>
+                     <p>15k Views 2 days</p>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="vid-list">
+                <a href=""><img src="./images/thumbnail8.png" class="thumbnail" /></a> 
+                 <div class="flex-div">
+                     <img src="./images/Jack.png" alt="jack-img" />
+                     <div class="vid-info">
+                         <a href="">Best Channel to learn coding that help you to be a web developer</a>
+                     <p>Easy Tutorials</p>
+                     <p>15k Views 2 days</p>
+                     </div>
+                 </div>
+             </div>
+        </div>
+    </div>
+
+    <script src="./scipt.js"></script>
 </body>
 
 </html>
