responsive index and play-video page

--- a/play-video.html
+++ b/play-video.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play Video Website</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <nav class="flex-div">
         <div class="nav-left flex-div">
@@ -27,115 +29,161 @@
         </div>
     </nav>
 
-<div class="container play-container">
-    <div class="row">
-        <div class="play-video">
-            <video controls autoplay>
-                <source src="./images/video.mp4" type="video/mp4">
-            </video>
-        </div>
-        <div class="right-sidebar">
-            <div class="side-video-list">
-                <div class="small-thumbnail">
+    <div class="container play-container">
+        <div class="row">
+            <div class="play-video">
                 <video controls autoplay>
                     <source src="./images/video.mp4" type="video/mp4">
                 </video>
-            </div>
-                <div class="vid-info">
-                    <a href="">Best channel to learn</a>
-                    <p>Saurabh Channel</p>
-                    <p>15K Views</p>
-                </div>
-            </div>
-            <div class="side-video-list">
-                <div class="small-thumbnail">
-                <video controls autoplay>
-                    <source src="./images/video.mp4" type="video/mp4">
-                </video>
-            </div>
-                <div class="vid-info">
-                    <a href="">Best channel to learn</a>
-                    <p>Saurabh Channel</p>
-                    <p>15K Views</p>
-                </div>
-            </div>
-            <div class="side-video-list">
-                <div class="small-thumbnail">
-                <video controls autoplay>
-                    <source src="./images/video.mp4" type="video/mp4">
-                </video>
-            </div>
-                <div class="vid-info">
-                    <a href="">Best channel to learn</a>
-                    <p>Saurabh Channel</p>
-                    <p>15K Views</p>
-                </div>
-            </div>
-            <div class="side-video-list">
-                <div class="small-thumbnail">
-                <video controls autoplay>
-                    <source src="./images/video.mp4" type="video/mp4">
-                </video>
-            </div>
-                <div class="vid-info">
-                    <a href="">Best channel to learn</a>
-                    <p>Saurabh Channel</p>
-                    <p>15K Views</p>
-                </div>
-            </div>
-            <div class="side-video-list">
-                <div class="small-thumbnail">
-                <video controls autoplay>
-                    <source src="./images/video.mp4" type="video/mp4">
-                </video>
-            </div>
-                <div class="vid-info">
-                    <a href="">Best channel to learn</a>
-                    <p>Saurabh Channel</p>
-                    <p>15K Views</p>
-                </div>
-            </div>
-            <div class="side-video-list">
-                <div class="small-thumbnail">
-                <video controls autoplay>
-                    <source src="./images/video.mp4" type="video/mp4">
-                </video>
-            </div>
-                <div class="vid-info">
-                    <a href="">Best channel to learn</a>
-                    <p>Saurabh Channel</p>
-                    <p>15K Views</p>
-                </div>
-            </div>
-            <div class="side-video-list">
-                <div class="small-thumbnail">
-                <video controls autoplay>
-                    <source src="./images/video.mp4" type="video/mp4">
-                </video>
-            </div>
-                <div class="vid-info">
-                    <a href="">Best channel to learn</a>
-                    <p>Saurabh Channel</p>
-                    <p>15K Views</p>
-                </div>
-            </div>
-            <div class="side-video-list">
-                <div class="small-thumbnail">
-                <video controls autoplay>
-                    <source src="./images/video.mp4" type="video/mp4">
-                </video>
-            </div>
-                <div class="vid-info">
-                    <a href="">Best channel to learn</a>
-                    <p>Saurabh Channel</p>
-                    <p>15K Views</p>
-                </div>
-            </div>
 
+                <div class="tags">
+                    <a href="">#Coding</a>
+                    <a href="">#HTML</a>
+                    <a href="">#CSS</a>
+                    <a href="">#JavaScript</a>
+                </div>
+
+                <h3>Best Youtube Channel</h3>
+                <div class="play-video-info">
+                    <p>1225 Views &bull; 2 days ago</p>
+                    <div>
+                        <a href=""><img src="./images/like.png" />125</a>
+                        <a href=""><img src="./images/dislike.png" />2</a>
+                        <a href=""><img src="./images/share.png" />Share</a>
+                        <a href=""><img src="./images/save.png" />Save</a>
+                    </div>
+                </div>
+                <hr />
+                <div class="publisher">
+                    <img src="./images/Jack.png" alt="jack-img" />
+                    <div>
+                        <p>Easy Channel</p>
+                        <span>20k Subscribers</span>
+                    </div>
+                    <button type="button">Subscribe</button>
+                </div>
+                <div class="vid-description">
+                    <p>Channel that makes learning easy</p>
+                    <p>Subscribe my channel</p>
+                    <hr />
+                    <h4>134 Comments</h4>
+                    <div class="add-comment">
+                        <img src="./images/Jack.png" alt="jack-img" />
+                        <input type="text" placeholder="Write Comments..." />
+                    </div>
+                    <div class="old-comment">
+                        <img src="./images/Jack.png" alt="jack-img" />
+                        <div>
+                            <h3>Saurabh Mishra <span>2 days ago</span></h3>
+                            <p>A global computer network provising a variety of information and communication
+                                facilities, consisting of interconnected network.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right-sidebar">
+                <div class="side-video-list">
+                    <div class="small-thumbnail">
+                        <video controls autoplay>
+                            <source src="./images/video.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="vid-info">
+                        <a href="">Best channel to learn</a>
+                        <p>Saurabh Channel</p>
+                        <p>15K Views</p>
+                    </div>
+                </div>
+                <div class="side-video-list">
+                    <div class="small-thumbnail">
+                        <video controls autoplay>
+                            <source src="./images/video.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="vid-info">
+                        <a href="">Best channel to learn</a>
+                        <p>Saurabh Channel</p>
+                        <p>15K Views</p>
+                    </div>
+                </div>
+                <div class="side-video-list">
+                    <div class="small-thumbnail">
+                        <video controls autoplay>
+                            <source src="./images/video.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="vid-info">
+                        <a href="">Best channel to learn</a>
+                        <p>Saurabh Channel</p>
+                        <p>15K Views</p>
+                    </div>
+                </div>
+                <div class="side-video-list">
+                    <div class="small-thumbnail">
+                        <video controls autoplay>
+                            <source src="./images/video.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="vid-info">
+                        <a href="">Best channel to learn</a>
+                        <p>Saurabh Channel</p>
+                        <p>15K Views</p>
+                    </div>
+                </div>
+                <div class="side-video-list">
+                    <div class="small-thumbnail">
+                        <video controls autoplay>
+                            <source src="./images/video.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="vid-info">
+                        <a href="">Best channel to learn</a>
+                        <p>Saurabh Channel</p>
+                        <p>15K Views</p>
+                    </div>
+                </div>
+                <div class="side-video-list">
+                    <div class="small-thumbnail">
+                        <video controls autoplay>
+                            <source src="./images/video.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="vid-info">
+                        <a href="">Best channel to learn</a>
+                        <p>Saurabh Channel</p>
+                        <p>15K Views</p>
+                    </div>
+                </div>
+                <div class="side-video-list">
+                    <div class="small-thumbnail">
+                        <video controls autoplay>
+                            <source src="./images/video.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="vid-info">
+                        <a href="">Best channel to learn</a>
+                        <p>Saurabh Channel</p>
+                        <p>15K Views</p>
+                    </div>
+                </div>
+                <div class="side-video-list">
+                    <div class="small-thumbnail">
+                        <video controls autoplay>
+                            <source src="./images/video.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="vid-info">
+                        <a href="">Best channel to learn</a>
+                        <p>Saurabh Channel</p>
+                        <p>15K Views</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
-</div>
 
 
 </body>
+
 </html>
